generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

enum AuthProvider {
  LOCAL
  GOOGLE
  FACEBOOK
}

enum UserRole {
  USER
  ADMIN
}

enum UserStatus {
  ACTIVE
  BANNED
}

enum ContentStatus {
  DRAFT
  PUBLISHED
}

enum ReportStatus {
  PENDING
  RESOLVED
  REJECTED
}

model User {
  id             String     @id @default(cuid())
  email          String     @unique
  passwordHash   String?
  name           String
  avatar         String?
  role           UserRole   @default(USER)
  status         UserStatus @default(ACTIVE)
  authProvider   AuthProvider @default(LOCAL)
  providerUserId String?
  createdAt      DateTime   @default(now())
  updatedAt      DateTime   @updatedAt

  contents               Content[]
  favorites              Favorite[]
  feedbacks              Feedback[]
  reports                Report[]
  notifications          Notification[]
  friendshipsRequested   Friendship[]  @relation("FriendshipRequester")
  friendshipsReceived    Friendship[]  @relation("FriendshipAddressee")
  createdGroups          Group[]       @relation("GroupCreator")
  groupMemberships       GroupMember[]
  @@unique([authProvider, providerUserId])
}

model PasswordReset {
  id        String   @id @default(cuid())
  email     String
  code      String
  expiresAt DateTime
  used      Boolean  @default(false)
  createdAt DateTime @default(now())

  @@index([email])
}

model Report {
  id          String       @id @default(cuid())
  userId      String
  targetType  String
  targetId    String?
  reason      String
  description String?
  status      ReportStatus @default(PENDING)
  resolution  String?
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Notification {
  id        String   @id @default(cuid())
  userId    String
  title     String
  body      String
  read      Boolean  @default(false)
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model Category {
  id          String    @id @default(cuid())
  name        String
  slug        String    @unique
  description String?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  contents    Content[]
}

model Content {
  id          String        @id @default(cuid())
  title       String
  body        String
  status      ContentStatus @default(DRAFT)
  authorId    String
  categoryId  String?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  author    User       @relation(fields: [authorId], references: [id], onDelete: Cascade)
  category  Category?  @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  favorites Favorite[]
}

model Favorite {
  id        String   @id @default(cuid())
  userId    String
  contentId String
  createdAt DateTime @default(now())

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  content Content @relation(fields: [contentId], references: [id], onDelete: Cascade)

  @@unique([userId, contentId])
}

model Feedback {
  id        String   @id @default(cuid())
  userId    String
  message   String
  rating    Int?
  resolved  Boolean  @default(false)
  reply     String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

/// status: PENDING | ACCEPTED | BLOCKED
model Friendship {
  id          String   @id @default(cuid())
  requesterId String
  addresseeId String
  status      String   @default("PENDING")
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  requester User @relation("FriendshipRequester", fields: [requesterId], references: [id], onDelete: Cascade)
  addressee User @relation("FriendshipAddressee", fields: [addresseeId], references: [id], onDelete: Cascade)

  @@unique([requesterId, addresseeId])
  @@index([addresseeId])
}

model Group {
  id          String   @id @default(cuid())
  name        String
  description String?
  avatarUrl   String?
  isPublic    Boolean  @default(false)
  creatorId   String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  creator User          @relation("GroupCreator", fields: [creatorId], references: [id], onDelete: Cascade)
  members GroupMember[]

  @@index([creatorId])
}

/// role: OWNER | ADMIN | MEMBER
model GroupMember {
  id       String   @id @default(cuid())
  groupId  String
  userId   String
  role     String   @default("MEMBER")
  joinedAt DateTime @default(now())

  group Group @relation(fields: [groupId], references: [id], onDelete: Cascade)
  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([groupId, userId])
  @@index([userId])
}
